<resources>
    <string name="app_name">ALERT!</string>
    <string name="texto01">Bienvenido!!</string>
    <string name="texto02">Ingresar</string>
    <string name="texto03">No estoy Registrado!</string>
    <string name="texto04">Ya estoy registrado!</string>
    <string name="texto05">Registrarme!</string>
    <string name="hint01">Correo Electronico</string>
    <string name="hint02">Contraseña</string>
    <string name="hint03">Nombre</string>
    <string name="hint04">Apellido Paterno</string>
    <string name="hint05">Apellido Materno</string>
    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>